dev/hasura/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura
  namespace: dev
spec:
  selector:
    app: hasura
  ports:
  - protocol: TCP
  - port: 80
    targetPort: 8080
